--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "react",
     "private": true,
     "version": "0.0.0",
-    "homepage": "laptop-in-react/",
+    "homepage": "https://gustavovianaveiga.github.io/laptop-in-react/",
     "scripts": {
         "dev": "vite",
         "build": "vite build",
