--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "gh-pages": "^4.0.0",
         "jquery": "^3.6.0",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
